[FEATURES] choose image from gallery
Added handler for choose and display image from gallery or documents

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -2,4 +2,6 @@
     <string name="fit_element">Dopasuj element</string>
     <string name="solve">Ułóż</string>
     <string name="settings">Ustawienia</string>
+    <string name="file_not_found">Nie znaleziono pliku</string>
+    <string name="error">Błąd</string>
 </resources>
