--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -3,4 +3,7 @@
     <string name="fit_element">Fit element</string>
     <string name="solve">Solve</string>
     <string name="settings">Settings</string>
+    <string name="image_saved">Image saved</string>
+    <string name="file_not_found">File not found</string>
+    <string name="error">Error</string>
 </resources>
