--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
-    <string name="app_name">JigsawSolver</string>
+    <string name="app_name" translatable="false">JigsawSolver</string>
     <string name="file_not_found">File not found</string>
     <string name="error">Error</string>
+    <string name="image_saved">Image saved</string>
+    <string name="fit_element">Fit element</string>
+    <string name="settings">Settings</string>
+    <string name="solve">Solve</string>
 </resources>
