--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,4 +6,7 @@
     <string name="image_saved">Image saved</string>
     <string name="file_not_found">File not found</string>
     <string name="error">Error</string>
+    <string name="camera_error">Camera error</string>
+    <string name="template_not_loaded">Template not loaded</string>
+    <string name="piece_not_found">Piece not found</string>
 </resources>
